2000-10-17  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsd/nsconf.h: All configuration option defaults have been moved
	to nsconf.h as #defines.

	* Makefile (install): Tcl library for nsd8x is now installed into
	$(PREFIX)/lib/tcl8.3.

	* tcl/http.tcl (ns_httpopen): Host:port is now sent to remote host
	if != 80.  Suggested by Jerry Asher.

	* tcl/fastpath.tcl (_ns_dirlist): All kinds of Win32 pathnames
	should now be working.  Thanks to Eric Klein.

	* nsd/return.c (Ns_ConnReturnNotice): New options "errorminsize",
	to pad error messages to defeat MSIE friendly errors (fix
	suggested by ArsDigita) and "noticedetail" to return more detailed
	information on notice pages.

	* nslog/nslog.c: suppressquery option added to suppress logging of
	query data.

	* nslog/nslog.c: LogExtendedHEaders option added.  Contributed by
	ArsDigita.


	* nsd/tclfile.c: Input string to mktemp is copied, because mktemp
	edits the string in-place and that's generally a bad thing to do
	with argv's.  Contributed by ArsDigita.

	* nsd/tclnsshare.cpp (ShareTraceProc): Patch to tclnsshare.cpp to
	avoid race conditions if the shared value is a list.  Contributed
	by ArsDigita.

	* tcl/http.tcl (ns_httpopen): CRLF now returned in ns_httpopen.
	Contributed by ArsDigita.

	* tcl8.3.2/generic/tclCmdIL.c: Nonsense case of lsorting a list
	with length <= 0 caused a memory leak.  Fixed.  Contributed by
	ArsDigita.
	
	* nsd/adpfancy.c: We now use the Arsdigita version of adpfancy.
	Contributed by ArsDigita.
	
	* nsd/adp.c: Sundry ArsDigita changes.

2000-10-16  Kriston J. Rehberg  <Kriston@AOL.NET>

	* tcl/init.tcl:  Initialize errorCode and errorInfo like tclsh
	does.  From ArsDigita.

	* nsd/nsd.h, nsd/tclcmds.c, nsd/tclvar.c: nsv_names Tcl command
	lists names of nsv's in memory.

	* tcl8.3.2: The complete Tcl 8.x distributions are now included.
	They aren't installed with AOLserver's "gmake install", but you
	can install them manually if you want to use them for the i18n